# egcda-uavs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: rust.yml
bm/: Cargo.toml
bm/src/: main.rs  puf.rs
gs/: Cargo.toml
gs/src/: auth.rs  main.rs  mem.rs  reg.rs  reg_auth.rs  rpc_impl.rs  uav_auth.rs  uav_auth_comm.rs
gs/src/codec/: gs_auth_codec.rs  gs_register_codec.rs  mod.rs  uav_auth_codec.rs  uav_communicate_codec.rs
pb/: Cargo.toml  build.rs
pb/proto/: auth_gs_uav.proto  auth_ta_gs.proto  communicate_gs_uav.proto  communicate_uav_uav.proto  register_ta_gs.proto  register_ta_uav.proto
pb/src/: auth_gs_uav.rs  auth_gs_uav_impl.rs  auth_ta_gs.rs  auth_ta_gs_impl.rs  communicate_gs_uav.rs  communicate_gs_uav_impl.rs  communicate_uav_uav.rs  communicate_uav_uav_impl.rs  lib.rs  register_ta_gs.rs  register_ta_uav.rs  register_ta_uav_impl.rs
pbc-rust/: CMakeLists.txt  Cargo.toml  build.rs  wrapper.c  wrapper.h
pbc-rust/examples/: bls.rs
pbc-rust/src/: bindings.rs  lib.rs  pairing.rs
puf_py/: README.md  main.py  requirements.txt
puf_uart/: .gitignore  README.md  puf_uart.xpr
puf_uart/puf_uart.srcs/constrs_1/new/: puf_uart.xdc
puf_uart/puf_uart.srcs/sources_1/new/: fpga_puf.vhd  main.v
rpc/: Cargo.toml
rpc/src/: gs.rs  lib.rs  ta.rs
ta/: Cargo.toml
ta/src/: gs_reg_auth.rs  main.rs  rpc_impl.rs  uav_reg.rs
ta/src/codec/: gs_auth_codec.rs  gs_register_codec.rs  mod.rs  uav_register_codec.rs
uav/: Cargo.toml
uav/src/: auth.rs  comm.rs  main.rs  mem.rs  puf.rs  puf_serial.rs  register.rs  uav_auth_comm.rs  uav_cfg.rs  uav_reg.rs
uav/src/codec/: mod.rs  uav_auth_codec.rs  uav_communicate_codec.rs  uav_register_codec.rs  uav_uav_communicate_codec.rs
utils/: Cargo.toml
utils/benches/: hash_to_prime_bench.rs
utils/examples/: crt_profile.rs
utils/src/: lib.rs
