[package]
name = "bm"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
hex = "0.4.3"
anyhow = "1.0.72"
rand = "0.8.5"
chrono = "0.4.26"
rug = { version = "1.19.2", features = ["serde"] }
blstrs_plus = { version = "0.8.18", features = ["portable", "serde"] }
blake2 = "0.10.6"
tokio = { version = "1.44.0", features = ["full"] }
