[package]
name = "bm"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
hex = "0.4.3"
anyhow = "1.0.102"
rand = "0.8.5"
chrono = "0.4.44"
rug = { version = "1.29.0", features = ["serde"] }
blstrs_plus = { version = "0.8.18", features = ["portable", "serde"] }
blake2 = "0.10.6"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.9"
tokio = { version = "1.50.0", features = ["full"] }
