[package]
name = "gs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rpc ={ path = "../rpc" }
utils = { path = "../utils" }

bytes = "1.11.1"
futures = "0.3.32"
hex = "0.4.3"
hex-literal = "0.4.1"
tokio = { version = "1.50.0", features = ["full"] }
# tokio-util = { version = "0.7.8", features = ["codec"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
anyhow = "1.0.102"
rand = "0.8.5"
lazy_static = "1.5.0"
sha256 = "1.6.0"
chrono = "0.4.44"
crypto = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
rug = { version = "1.29.0", features = ["serde"] }
dashmap = { version = "5.5.3", features = ["serde"] }
serde_json = "1.0.149"
futures-channel = "0.3.32"
blstrs_plus = "0.8.18"
pairing = "0.23.0"
tarpc = { version = "0.36.0", features = ["full"] }
blake2 = "0.10.6"
rayon = "1.11.0"
