[package]
name = "ta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"

pb = { path = "../pb" }
mcore = { path = "../../mcore", features = ["std"] }
anyhow = "1.0.72"
lazy_static = "1.4.0"
dashmap = { version = "5.5.0", features = ["serde"] }
rand = "0.8.5"
sha256 = "1.2.2"
chrono = "0.4.26"
rug = { version = "1.19.2", features = ["serde"] }
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
aes-gcm = "0.10.2"
