[package]
name = "uav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { path = "../rpc" }
utils = { path = "../utils" }

bytes = "1.4.0"
futures = "0.3.28"
hex = "0.4.3"
hex-literal = "0.4.1"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
anyhow = "1.0.72"
rand = "0.8.5"
lazy_static = "1.4.0"
sha256 = "1.2.2"
chrono = "0.4.26"
serde = { version = "1.0.175", features = ["derive"] }
rug = { version = "1.19.2", features = ["serde"] }
dashmap = { version = "5.5.0", features = ["serde"] }
serde_json = "1.0.103"
clap = { version = "4.3.19", features = ["derive"] }
tarpc = { version = "0.36.0", features = ["full"] }
blstrs_plus = { version = "0.8.18", features = ["portable", "serde"] }
blake2 = "0.10.6"

