[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.99"
blake2 = "0.10.6"
blstrs_plus = "0.8.18"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
rug = "1.28.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[[bench]]
name = "hash_to_prime_bench"
harness = false
